--- a/public/services/src/app/views/ask/index/ask-index.less
+++ b/public/services/src/app/views/ask/index/ask-index.less
@@ -1,12 +1,10 @@
 .grid-item {
-<<<<<<< HEAD
-    display: inline-block;
+    float: left;
     width: 47%;
     margin: 0 1.5% 3%;
 }
 .grid {
     position: relative;
-    width: 47%;
     float: left;
     margin-bottom: 20px;
 }
@@ -18,10 +16,6 @@
             /*margin: 0 1.5% 3%;*/
             border-radius: 0.29rem;
             box-shadow: 0 0.04rem 0.04rem #e2e2e2;
-            margin: 0 1.5% 3%;
-            border-radius: 0.29rem;
-            box-shadow: 0 0.04rem 0.04rem #e2e2e2;
-            overflow: hidden;
             .workSectionHeader{
                 width: 100%;
                 box-sizing: border-box;
