--- a/public/main/res/app/templates/homepage/HomeComplete.html
+++ b/public/main/res/app/templates/homepage/HomeComplete.html
@@ -1,14 +1,14 @@
 <div class="home-complete">
 	<div class="clearfix home-complete-bg">
 		<div class="work clearfix">
-			<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160429-1424065722fe06a8132.png?imageView2/2/w/320" alt="">
+			<img src="<%= ask.image_url %>" alt="">
 		</div>
 		<div class="time">
-			<div class="complete-time">完成时间: <b>2001-1-1</b></div>
+			<div class="complete-time">完成时间: <b><% var timeMatrixing = time(create_time); %><%= timeMatrixing %></b></div>
 		</div>
 		<div class="status-section">
 			<div class="status">状态:</div>
-			<div class="state">审核中</div>
+			<div class="state"><%= status_text %></div>
 		</div>
 	</div>
 </div>
