--- a/public/main/res/app/templates/money/MoneyView.html
+++ b/public/main/res/app/templates/money/MoneyView.html
@@ -31,7 +31,7 @@
 		绑定的微信将成为你的提现账户
 	</div>
     <div class="binding">
-        <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxa0b2dda705508552&redirect_uri=http://twww.tupppai.com/auth/weixin&response_type=code&scope=snsapi_base#wechat_redirect"> 绑定 </a>
+        <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxa0b2dda705508552&redirect_uri=http://www.tupppai.com/auth/weixin&response_type=code&scope=snsapi_base#wechat_redirect"> 绑定 </a>
     </div>
 </div>
 
